k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whistleblower
  labels:
    app.kubernetes.io/name: whistleblower
    app.kubernetes.io/managed-by: manual
