k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whistle-ingress
  namespace: whistleblower
  labels:
    app.kubernetes.io/name: whistleblower
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - whistle.finance.gov.ng
      secretName: whistle-tls-secret
  rules:
    - host: whistle.finance.gov.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whistle-app-svc
                port:
                  number: 8000
